<resources>
    <string name="app_name">Rotut</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_icon">"Home"</string>
    <string name="search_icon">"Search"</string>
    <string name="account_icon">"Account"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="message_notice">Message Notice</string>
    <string name="show_my_location">Show my location</string>
    <string name="check_for_update">Check for Update</string>
    <string name="q_and_a_center">Q and A Center</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="q_and_a">Q and A</string>
    <string name="update">Update</string>
    <string name="current_version_v_1_0">Current Version: V 1.0</string>
    <string name="latest_version_v_1_0">Latest Version: V 1.0</string>
    <string name="the_app_do_not_need_to_be_updated">The app do not need to be updated</string>
    <string name="q_how_long_did_this_project_take_you">Q: How long did this project take you ?</string>
    <string name="a_about_a_few_weeks">A: About a few weeks.</string>
    <string name="no_update_is_needed">No update is needed</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="wallet">Wallet</string>
    <string name="edit_account">Edit Account</string>
</resources>
