<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateActivity">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="412dp"
            android:layout_height="59dp"
            android:background="#009EC7"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />

        <TextView
            android:id="@+id/editText5"
            android:layout_width="420dp"
            android:layout_height="108dp"
            android:ems="10"
            android:text="@string/current_version_v_1_0"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33"/>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="416dp"
            android:layout_height="76dp"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="407dp"
            android:layout_height="49dp"
            android:text="@string/latest_version_v_1_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="413dp"
            android:layout_height="168dp"
            android:text="@string/no_update_is_needed"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#0E0E0E"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView37" />

</androidx.constraintlayout.widget.ConstraintLayout>