<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="411dp"
        android:layout_height="68dp"
        android:layout_gravity="bottom"
        android:background="#009EC7"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:background="#009EC7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F1F1F1"
        android:fontFamily="sans-serif-light"
        android:text="@string/profile"
        android:textColor="#43000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        />

    <Button
        android:id="@+id/wallet"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="#1E009EC7"
        android:fontFamily="sans-serif-light"
        android:text="@string/wallet"
        android:textColor="#43000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#1E009EC7"
        android:fontFamily="sans-serif-light"
        android:text="settings"
        android:textColor="#43000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAccount" />

    <Button
        android:id="@+id/editAccount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F1F1F1"
        android:fontFamily="sans-serif-light"
        android:text="@string/edit_account"
        android:textColor="#43000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet" />


</androidx.constraintlayout.widget.ConstraintLayout>